--- a/src/app/Pages/Dashboard/Layout/SubmitCertificate/styles.module.scss
+++ b/src/app/Pages/Dashboard/Layout/SubmitCertificate/styles.module.scss
@@ -111,7 +111,9 @@ $border_color: #c4c5c9;
     user-select: none;
     text-align: right;
     white-space: nowrap;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+      "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+      "Helvetica Neue", sans-serif;
   }
 
   .submit_button {
@@ -135,8 +137,11 @@ $border_color: #c4c5c9;
   direction: rtl;
 
   .report_body {
+    height: 100%;
     display: flex;
+    align-items: center;
     flex-direction: row;
+    justify-content: center;
   }
 
   .right_side {
