--- a/src/app/Pages/CreateTicket/styles.module.scss
+++ b/src/app/Pages/CreateTicket/styles.module.scss
@@ -17,16 +17,10 @@
     justify-content: flex-end;
     height: clamp(90px, 9.7vh, 111px);
 
-    img:nth-child(2n + 1) {
-      width: 2rem;
-      height: 2rem;
-      margin: 0 0 0 3vw;
-      filter: brightness(0) invert(1);
-    }
-
     img:nth-child(2n) {
-      width: 3.6rem;
       height: 3rem;
+      width: 3.6rem;
+      cursor: pointer;
       margin: 0 0 0 3vw;
     }
 
